Правки по замечаниям ревьюера