@@ -1,16 +1,18 @@
-import Task.Task;
+package manager;
 
-import java.util.ArrayList;
+import task.Task;
+
+import java.util.LinkedList;
 import java.util.List;
 
 public class InMemoryHistoryManager implements HistoryManager {
 
-    private final List<Task> history = new ArrayList<>();
+    private final LinkedList<Task> history = new LinkedList<>();
 
     public void add(Task task) {
         history.add(task);
         if (history.size() > 10) {
-            history.remove(0);
+            history.removeFirst();
         }
     }
 
